--- a/results/00_dmethr_pipeline.Rmd
+++ b/results/00_dmethr_pipeline.Rmd
@@ -18,7 +18,7 @@ output:
 knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, eval=TRUE, echo=FALSE, results="hide", warning=FALSE)
 ```
 
-# Objectiv
+# Objectives
 
 
 ```{r}
@@ -28,6 +28,15 @@ if (!exists("ud_str"))               { ud_str = 2500                ;}
 if (!exists("feature_pretreatments")){ feature_pretreatment = "raw" ;}
 if (!exists("reducer_func2_names"))  { reducer_func2_name = "mean" ;}
 prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reducer_func2_name)  
+
+gses = c("GSE45332", "GSE5816", "GSE14315", "GSE25427", "GSE22250")
+models = c(
+  "DNMT DKO vs. WT (ref.)", 
+  "5-aza 1000 nM vs. DMSO (ref.)"
+  "5-aza vs. Ctrl (ref.)"
+  "5-aza vs. Mock (ref.)"
+  "5-aza vs. WT (ref.)"
+)
 ```
 
 ```{r child="01_tss_cpg_status.Rmd"}
@@ -45,10 +54,13 @@ prefix3 = paste0(feature_pretreatment, "_", ud_str, "_", nb_rnd_feat, "_", reduc
 ```{r child="03_da_GSE5816.Rmd", eval=TRUE}
 ```
 
-```{r child="03_da_GSE14315.Rmd", eval=FALSE}
+```{r child="03_da_GSE14315.Rmd", eval=TRUE}
 ```
 
-```{r child="03_da_GSE25427.Rmd", eval=FALSE}
+```{r child="03_da_GSE25427.Rmd", eval=TRUE}
+```
+
+```{r child="03_da_GSE22250.Rmd", eval=TRUE}
 ```
 
 ```{r child="03_da_summary.Rmd", eval=TRUE}
