--- a/results/00_dmethr_poster.Rmd
+++ b/results/00_dmethr_poster.Rmd
@@ -404,9 +404,9 @@ fig_label("F", cex=3)
 For each genes a linear regression of the expression as a function of the average methylation of its TSS+/-2.5kb was performed. 
 **(A)** As an example,  a heatmap shows the methylation levels (scale ranging between blue corresponding to lowest and red to highest methylation levels) of the of CpGs of the TSPYL5 gene promoter (x-axis) for the TCGA-LUSC samples (y-axis) ranked according to the expression of the same gene (ranked from high (top) to low (bottom) expression , y-axis). This TSPYL5 TSS+/-2.5kb methylation heatmap shows that a low TSPYL5 expression is associated to a strong methylation (in red) of the region surrounding TSPYL5 TSS whereas high expression of TSPYL5 is associated to a demethylation of the same genomic region (in blue). 
 **(B)** The average methylation value of TSPYL5 promoter region was calculated for each patient and linear regression *expression ~ average methylation* was performed. The TSPYL5 expression (y-axis) is plotted as a function of the TSPYL5 average methylation (x=axis) and each point represent a sample. The red line is the regression line. The coefficient of the linear model (beta=$`r signif(m$coef[[2]],3)`$) and the associated Fisher p-value $`r signif(anova(m)[1,5],3)`$ are reported on the graph.
-**(C)** In the same way, beta and p-values were collected for all genes and plotted on the corresponding volcano plot (one dot/gene, the x-axis represents the linear regression coefficient of the model and y-axis represents -log10 of the Fisher p-value). Genes are represented as grey circles except *methplusplus* genes represented as red circles. The top `r ntop` upregulated genes of the model `r models[[1]]` (resp. `r models[[2]]`) in gse `r gses[[1]]` (resp. `r gses[[2]]`) dataset are represented as blue (resp. purple) dots. The plot shows that for most of the genes an increased expression correlates with a decrease of their TSS+/-2.5kb methylation.
-**(D)** The GSEA enrichment plots show the **depletion** of ***methplusplus* genes** in the `r sum(!is.na(feats[,"momik_betas"]))`-length **all genes** vector of linear regression coefficients. It means that the epression of *methplusplus* genes anticorrelated with the methylation status of the region surrounding their TSS.
-**(E)** (resp. **(F)**) The enrichment plot shows the depletion of the  **top `r ntop` upregulated genes** of the model `r models[[1]]` (resp. `r models[[2]]`) in the `r sum(!is.na(feats[,"momik_betas"]))`-length  ***methplusplus* genes** vector of linear regression coefficients.
+**(C)** In the same way, beta and p-values were collected for all genes and plotted on the corresponding volcano plot (one dot/gene, the x-axis represents the linear regression coefficient of the model and y-axis represents $-log10(pval_{Fisher})$). Genes are represented as grey circles except *methplusplus* genes represented as red circles. The top `r ntop` upregulated genes of the model `r models[[1]]` (resp. `r models[[2]]`) in  `r gses[[1]]` (resp. `r gses[[2]]`) dataset are represented as blue (resp. purple) dots. The plot shows that for most of the genes an increased expression correlates with a decrease of their TSS+/-2.5kb methylation.
+**(D)** The GSEA enrichment plots show the **depletion** of ***methplusplus* genes** in the `r sum(!is.na(feats[,"momik_betas"]))`-length **all genes** vector of linear regression coefficients. It means that the expression of *methplusplus* genes anticorrelated with the methylation status of the region surrounding their TSS.
+**(E)** (resp. **(F)**) The enrichment plot shows the **depletion** of the  **top `r ntop` upregulated genes** of the model `r models[[1]]` (resp. `r models[[2]]`) in the `r sum(feats[[gs_name]])`-length  ***methplusplus* genes** vector of linear regression coefficients.
 It means that the expression of *methplusplus* genes that are reactivated in a demethylating context is more significantly associated with a demethylation of the region surrounding their TSS than *methplusplus* genes themselves.
 
 
