--- a/results/04_results.Rmd
+++ b/results/04_results.Rmd
@@ -18,51 +18,187 @@ knitr::opts_chunk$set(collapse=TRUE, comment = "#>", fig.width=9, fig.height=6, 
 ```
 
 ```{r}
-if (! exists("momik_pvalbetas")) {
-  genes_singleton = mget_genes(tcga_project)
-  genes = genes_singleton$genes
+# faire boucle pour les deux (voir 3) TCGA 
 
-  s_meth = mreadRDS("~/projects/all_human_tissues/results/meth/study_meth_all_human_tissues_grch38.rds")
-  feat_indexed_probes = mget_feat_indexed_probes(feats_bed6=genes, s_meth$platform[,c("Chromosome", "Start")], up_str=ud_str, dwn_str=2500)
-  tmp_gs = intersect(names(feat_indexed_probes), rownames(genes))
-  momik_pvalbetas = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
-    #print(gene_symbol)
-    feat = genes[gene_symbol,]
-    tss = ifelse(feat[[6]]=="+", feat[[2]], feat[[3]])
-    interaction_range=2500
-    region_id = paste0(feat[[1]], ":", tss-interaction_range, "-", tss+interaction_range)      
-    feat_indexed_probes[[region_id]] = feat_indexed_probes[[gene_symbol]]
-    mdata = try(mget_multiomic_data(region_id=region_id, gene_symbols=gene_symbol, tcga_project=tcga_project, feat_indexed_probes=feat_indexed_probes))   
-    if (class(mdata) != "try-error"){
-      if ((!is.null(mdata$d)) & (gene_symbol %in% colnames(mdata$d))) {
-        mdata$d 
-        head(mdata$d)
-        Y = mdata$d[,gene_symbol]
-        X = apply(mdata$d[,mdata$probes],1,mean, na.rm=TRUE)
-        m = lm(Y~X)
-        
-        sm =summary(m)
-        fstat=sm$fstatistic
-        pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
-        beta = m$coefficient[[2]]
-        return(c(beta=beta, pval=pval))
+if (!exists("momik_pvalbetas")) {momik_pvalbetas = list()}
+
+s_meth = mreadRDS("~/projects/all_human_tissues/results/meth/study_meth_all_human_tissues_grch38.rds")
+for (tcga_project in tcga_projects) {
+  print(tcga_project)
+  if (!tcga_project %in% names(momik_pvalbetas)) {
+    genes_singleton = mget_genes(tcga_project)
+    genes = genes_singleton$genes
+    feat_indexed_probes = mget_feat_indexed_probes(feats_bed6=genes, s_meth$platform[,c("Chromosome", "Start")], up_str=ud_str, dwn_str=2500)
+    tmp_gs = intersect(names(feat_indexed_probes), rownames(genes))
+    
+    momik_pvalbetas_tmp = epimedtools::monitored_apply(mod=10, t(t(tmp_gs)), 1, function(gene_symbol) {
+      #print(gene_symbol)
+      feat = genes[gene_symbol,]
+      tss = ifelse(feat[[6]]=="+", feat[[2]], feat[[3]])
+      interaction_range=2500
+      region_id = paste0(feat[[1]], ":", tss-interaction_range, "-", tss+interaction_range)      
+      feat_indexed_probes[[region_id]] = feat_indexed_probes[[gene_symbol]]
+      mdata = try(mget_multiomic_data(region_id=region_id, gene_symbols=gene_symbol, tcga_project=tcga_project, feat_indexed_probes=feat_indexed_probes))   
+      if (class(mdata) != "try-error"){
+        if ((!is.null(mdata$d)) & (gene_symbol %in% colnames(mdata$d))) {
+          mdata$d 
+          head(mdata$d)
+          Y = mdata$d[,gene_symbol]
+          X = apply(mdata$d[,mdata$probes],1,mean, na.rm=TRUE)
+          m = lm(Y~X)
+          
+          sm =summary(m)
+          fstat=sm$fstatistic
+          pval = pf(fstat[[1]], fstat[[2]], fstat[[3]], lower.tail = FALSE)
+          beta = m$coefficient[[2]]
+          return(c(beta=beta, pval=pval))
+        } else {
+          warning(paste0("probleme with ", gene_symbol))
+          return(NULL)
+        }
       } else {
         warning(paste0("probleme with ", gene_symbol))
         return(NULL)
       }
-    } else {
-      warning(paste0("probleme with ", gene_symbol))
-      return(NULL)
-    }
-  })  
-  names(momik_pvalbetas) = tmp_gs  
-  momik_pvalbetas = do.call(rbind,momik_pvalbetas)
+    })  
+    names(momik_pvalbetas_tmp) = tmp_gs  
+    momik_pvalbetas_tmp = do.call(rbind,momik_pvalbetas_tmp)
+    momik_pvalbetas[[tcga_project]] = momik_pvalbetas_tmp
+  }
+  tmp_idx = intersect(rownames(feats),rownames(momik_pvalbetas[[tcga_project]]))
+  feats[,paste0("momik_pvals_", tcga_project)] = NA
+  feats[tmp_idx,paste0("momik_pvals_", tcga_project)] = momik_pvalbetas[[tcga_project]][tmp_idx,2]
+  feats[,paste0("momik_betas_", tcga_project)] = NA
+  feats[tmp_idx,paste0("momik_betas_", tcga_project)] = momik_pvalbetas[[tcga_project]][tmp_idx,1]
 }
-feats$momik_pvals = NA
-feats[rownames(momik_pvalbetas),]$momik_pvals = momik_pvalbetas[,2]
-feats$momik_betas = NA
-feats[rownames(momik_pvalbetas),]$momik_betas = momik_pvalbetas[,1]
-feats$momik_lpvals = -log10(feats$momik_pvals)
+#feats$momik_pvals = NA
+#feats[rownames(momik_pvalbetas),]$momik_pvals = momik_pvalbetas[,2]
+#feats$momik_betas = NA
+#feats[rownames(momik_pvalbetas),]$momik_betas = momik_pvalbetas[,1]
+#feats$momik_lpvals = -log10(feats$momik_pvals)
+  
+
+
+
+ntop=100
+idx = rownames(feats)[feats[["methplusplus"]]]
+idx2 = idx[order(feats[idx,]$l2fc_GSE45332, decreasing=TRUE)][1:ntop]
+idx3 = idx[order(feats[idx,]$l2fc_GSE5816, decreasing=TRUE)][1:ntop]
+
+
+```
+
+## Figure
+
+
+```{r fig.height=6}
+for (tcga_project in tcga_projects) {
+layout_mat2 =
+    cbind(
+      matrix(2, nrow=3, ncol=1),
+      matrix(1, nrow=3, ncol=4),
+      matrix(3, nrow=3, ncol=3)
+    )
+
+layout(layout_mat2, respect=TRUE)
+
+foo = momic_pattern("TSPYL5", tcga_project, LAYOUT=FALSE)
+fig_label("A", cex=3)
+
+meth = apply(foo$d[,foo$probes], 1, mean)
+expr = foo$d[,foo$gene_symbols]
+plot(meth, expr, main=paste0("TSPYL5 expr. ~ av. meth."), xlab="average methylation", ylab= "expression")
+m = lm(expr~meth)
+abline(m, col=2)
+fig_label("B", cex=3)
+
+legend("bottomleft", c(paste0("beta=", signif(m$coef[[2]],3)), paste0("Fisher pval=", signif(anova(m)[1,5],3))), bty = "n")
+}
+```
+
+
+
+
+```{r fig.height=9, eval=FALSE}
+
+ ntop=100
+idx = rownames(feats)[feats[["methplusplus"]]]
+idx2 = idx[order(feats[idx, ]$l2fc_GSE45332, decreasing = TRUE)][1:ntop]
+idx3 = idx[order(feats[idx, ]$l2fc_GSE5816, decreasing = TRUE)][1:ntop]
+gene_symbols = (union(idx2, idx3))
+gene_symbols = gene_symbols[order(feats[gene_symbols, paste0("momik_pvals_", tcga_project)])][1:min(6, length(gene_symbols))]
+  
+layout(matrix(1), respect=TRUE)
+plot(feats$momik_betas, feats$momik_lpvals, col="grey", 
+  xlim=c(-40,40),
+  main="gene expression ~ TSS+/-2.5kb methylation", xlab="beta (linear regression coefficient)", ylab="-log10(Fisher p-value)")
+points(feats[idx,]$momik_betas, feats[idx,]$momik_lpvals  , col="red")
+points(feats[idx2,]$momik_betas, feats[idx2,]$momik_lpvals, col="blue", pch=16)
+points(feats[idx3,]$momik_betas, feats[idx3,]$momik_lpvals, col="purple", pch=16)
+text(feats[gene_symbols,]$momik_betas, feats[gene_symbols,]$momik_lpvals, gene_symbols, col=adjustcolor(1, alpha.f=1), pos=3)
+legend("topright", 
+  c("genes", paste0("methplusplus", " genes"), paste0("methplusplus", " genes upregulated GSE45332 DA"), paste0(gs_name, " genes upregulated GSE5816 DA")), 
+  pch=c(1, 1, 16, 16), 
+  col=c("grey", "red", "blue", "purple"),
+  lty=c(0,0,0,0)
+)
+fig_label("C", cex=3)
+
+```
+
+
+
+```{r}
+layout(matrix(1:12 , 2), respect=TRUE)
+
+for (tcga_project in tcga_projects) {
+gene_set = rownames(feats)[feats[["methplusplus"]]]
+expression_vector = feats[,paste0("momik_betas_", tcga_project)]
+names(expression_vector) = rownames(feats)
+expression_vector = expression_vector[!is.na(expression_vector)]
+et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3)  
+
+for (gse in gses) {
+  idx = rownames(feats)[feats[["methplusplus"]]]
+  idx2 = idx[order(feats[idx,paste0("l2fc_", gse)], decreasing=TRUE)][1:ntop]
+  gene_set = idx2
+  expression_vector = feats[idx,paste0("momik_pvals_", tcga_project)]
+  names(expression_vector) = idx
+  expression_vector = expression_vector[!is.na(expression_vector)]
+  et_gsea_plot(expression_vector, gene_set, prefix=paste0("top", ntop, "_l2fc_", gse), nperm=3)
+}
+}
+```
+
+**Correlation between gene expression and TSS+/-2.5kb methylation in the TCGA-LUSC dataset (Lung Squamous Cell Carcinoma samples).** 
+For each genes a linear regression of the expression as a function of the average methylation of its TSS+/-2.5kb was performed. 
+**(A)** As an example,  a heatmap shows the methylation levels (scale ranging between blue corresponding to lowest and red to highest methylation levels) of the of CpGs of the TSPYL5 gene promoter (x-axis) for the TCGA-LUSC samples (y-axis) ranked according to the expression of the same gene (ranked from high (top) to low (bottom) expression , y-axis). This TSPYL5 TSS+/-2.5kb methylation heatmap shows that a low TSPYL5 expression is associated to a strong methylation (in red) of the region surrounding TSPYL5 TSS whereas high expression of TSPYL5 is associated to a demethylation of the same genomic region (in blue). 
+**(B)** The average methylation value of TSPYL5 promoter region was calculated for each patient and linear regression *expression ~ average methylation* was performed. The TSPYL5 expression (y-axis) is plotted as a function of the TSPYL5 average methylation (x=axis) and each point represent a sample. The red line is the regression line. The coefficient of the linear model (beta=$`r signif(m$coef[[2]],3)`$) and the associated Fisher p-value $`r signif(anova(m)[1,5],3)`$ are reported on the graph.
+**(C)** In the same way, beta and p-values were collected for all genes and plotted on the corresponding volcano plot (one dot/gene, the x-axis represents the linear regression coefficient of the model and y-axis represents -log10 of the Fisher p-value). Genes are represented as grey circles except *methplusplus* genes represented as red circles. The top `r ntop` upregulated genes of the model `r models[[1]]` (resp. `r models[[2]]`) in gse `r gses[[1]]` (resp. `r gses[[2]]`) dataset are represented as blue (resp. purple) dots. The plot shows that for most of the genes an increased expression correlates with a decrease of their TSS+/-2.5kb methylation.
+**(D)** The GSEA enrichment plots show the **depletion** of ***methplusplus* genes** in the `r sum(!is.na(feats[,"momik_betas"]))`-length **all genes** vector of linear regression coefficients. It means that the epression of *methplusplus* genes anticorrelated with the methylation status of the region surrounding their TSS.
+**(E)** (resp. **(F)**) The enrichment plot shows the depletion of the  **top `r ntop` upregulated genes** of the model `r models[[1]]` (resp. `r models[[2]]`) in the `r sum(!is.na(feats[,"momik_betas"]))`-length  ***methplusplus* genes** vector of linear regression coefficients.
+It means that the expression of *methplusplus* genes that are reactivated in a demethylating context is more significantly associated with a demethylation of the region surrounding their TSS than *methplusplus* genes themselves.
+
+
+
+
+```{r eval=FALSE}
+tcga_project = "TCGA-LUSC"
+s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
+s = truncate_survival(s, 60)
+idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
+
+
+foo = sapply(gene_symbols, function(gene_symbol) {
+  try(momic_pattern(gene_symbol, tcga_project))
+})
+```
+
+
+
+```{r survival, eval=FALSE}
+## Survival
+
 
 
 if (! exists("survival_pvalhrs")) {
@@ -99,119 +235,23 @@ feats$survival_hrs = NA
 feats[rownames(survival_pvalhrs),]$survival_hrs = survival_pvalhrs[,1]
 feats$survival_lpvals = -log10(feats$survival_pvals)
 
-ntop=100
-idx = rownames(feats)[feats[["methplusplus"]]]
-idx2 = idx[order(feats[idx,]$l2fc_GSE45332, decreasing=TRUE)][1:ntop]
-idx3 = idx[order(feats[idx,]$l2fc_GSE5816, decreasing=TRUE)][1:ntop]
-
-
-```
-
-## Figure
-
-
-```{r fig.height=6}
-layout_mat2 =
-    cbind(
-      matrix(2, nrow=3, ncol=1),
-      matrix(1, nrow=3, ncol=4),
-      matrix(3, nrow=3, ncol=3)
-    )
-    ntop=100
-idx = rownames(feats)[feats[["methplusplus"]]]
-idx2 = idx[order(feats[idx,]$l2fc_GSE45332, decreasing=TRUE)][1:ntop]
-idx3 = idx[order(feats[idx,]$l2fc_GSE5816, decreasing=TRUE)][1:ntop]
-gene_symbols = (union(idx2, idx3)) 
-gene_symbols = gene_symbols[order(feats[gene_symbols,]$momik_pvals)][1:min(6, length(gene_symbols))]
-
-
-layout(layout_mat2, respect=TRUE)
-
-foo = momic_pattern("TSPYL5", tcga_project, LAYOUT=FALSE)
-fig_label("A", cex=3)
-
-meth = apply(foo$d[,foo$probes], 1, mean)
-expr = foo$d[,foo$gene_symbols]
-plot(meth, expr, main=paste0("TSPYL5 expr. ~ av. meth."), xlab="average methylation", ylab= "expression")
-m = lm(expr~meth)
-abline(m, col=2)
-fig_label("B", cex=3)
-
-legend("bottomleft", c(paste0("beta=", signif(m$coef[[2]],3)), paste0("Fisher pval=", signif(anova(m)[1,5],3))), bty = "n")
-```
+# feats[,paste0("survival_pvals_", tcga_project)] = NA
+# feats[,paste0("survival_pvals_", tcga_project)] = survival_pvalhrs[rownames(feats),2]
+# feats[,paste0("survival_hrs_", tcga_project)] = NA
+# feats[,paste0("survival_hrs_", tcga_project)] = survival_pvalhrs[rownames(feats),1]
 
 
 
 
-```{r fig.height=9}
-layout(matrix(1), respect=TRUE)
-plot(feats$momik_betas, feats$momik_lpvals, col="grey", 
-  xlim=c(-40,40),
-  main="gene expression ~ TSS+/-2.5kb methylation", xlab="beta (linear regression coefficient)", ylab="-log10(Fisher p-value)")
-points(feats[idx,]$momik_betas, feats[idx,]$momik_lpvals  , col="red")
-points(feats[idx2,]$momik_betas, feats[idx2,]$momik_lpvals, col="blue", pch=16)
-points(feats[idx3,]$momik_betas, feats[idx3,]$momik_lpvals, col="purple", pch=16)
-text(feats[gene_symbols,]$momik_betas, feats[gene_symbols,]$momik_lpvals, gene_symbols, col=adjustcolor(1, alpha.f=1), pos=3)
-legend("topright", 
-  c("genes", paste0("methplusplus", " genes"), paste0("methplusplus", " genes upregulated GSE45332 DA"), paste0(gs_name, " genes upregulated GSE5816 DA")), 
-  pch=c(1, 1, 16, 16), 
-  col=c("grey", "red", "blue", "purple"),
-  lty=c(0,0,0,0)
-)
-fig_label("C", cex=3)
-
-```
-
-
-
-```{r}
-layout(matrix(1:6, 2), respect=TRUE)
-
-gene_set = rownames(feats)[feats[["methplusplus"]]]
-expression_vector = feats[,"momik_betas"]
-names(expression_vector) = rownames(feats)
-expression_vector = expression_vector[!is.na(expression_vector)]
-et_gsea_plot(expression_vector, gene_set, prefix="methplusplus", nperm=3)  
-
-for (gse in gses) {
-  idx = rownames(feats)[feats[["methplusplus"]]]
-  idx2 = idx[order(feats[idx,paste0("l2fc_", gse)], decreasing=TRUE)][1:ntop]
-  gene_set = idx2
-  expression_vector = feats[idx,"momik_betas"]
-  names(expression_vector) = idx
-  expression_vector = expression_vector[!is.na(expression_vector)]
-  et_gsea_plot(expression_vector, gene_set, prefix=paste0("top", ntop, "_l2fc_", gse), nperm=3)
-}
-```
-
-**Correlation between gene expression and TSS+/-2.5kb methylation in the TCGA-LUSC dataset (Lung Squamous Cell Carcinoma samples).** 
-For each genes a linear regression of the expression as a function of the average methylation of its TSS+/-2.5kb was performed. 
-**(A)** As an example,  a heatmap shows the methylation levels (scale ranging between blue corresponding to lowest and red to highest methylation levels) of the of CpGs of the TSPYL5 gene promoter (x-axis) for the TCGA-LUSC samples (y-axis) ranked according to the expression of the same gene (ranked from high (top) to low (bottom) expression , y-axis). This TSPYL5 TSS+/-2.5kb methylation heatmap shows that a low TSPYL5 expression is associated to a strong methylation (in red) of the region surrounding TSPYL5 TSS whereas high expression of TSPYL5 is associated to a demethylation of the same genomic region (in blue). 
-**(B)** The average methylation value of TSPYL5 promoter region was calculated for each patient and linear regression *expression ~ average methylation* was performed. The TSPYL5 expression (y-axis) is plotted as a function of the TSPYL5 average methylation (x=axis) and each point represent a sample. The red line is the regression line. The coefficient of the linear model (beta=$`r signif(m$coef[[2]],3)`$) and the associated Fisher p-value $`r signif(anova(m)[1,5],3)`$ are reported on the graph.
-**(C)** In the same way, beta and p-values were collected for all genes and plotted on the corresponding volcano plot (one dot/gene, the x-axis represents the linear regression coefficient of the model and y-axis represents -log10 of the Fisher p-value). Genes are represented as grey circles except *methplusplus* genes represented as red circles. The top `r ntop` upregulated genes of the model `r models[[1]]` (resp. `r models[[2]]`) in gse `r gses[[1]]` (resp. `r gses[[2]]`) dataset are represented as blue (resp. purple) dots. The plot shows that for most of the genes an increased expression correlates with a decrease of their TSS+/-2.5kb methylation.
-**(D)** The GSEA enrichment plots show the **depletion** of ***methplusplus* genes** in the `r sum(!is.na(feats[,"momik_betas"]))`-length **all genes** vector of linear regression coefficients. It means that the epression of *methplusplus* genes anticorrelated with the methylation status of the region surrounding their TSS.
-**(E)** (resp. **(F)**) The enrichment plot shows the depletion of the  **top `r ntop` upregulated genes** of the model `r models[[1]]` (resp. `r models[[2]]`) in the `r sum(!is.na(feats[,"momik_betas"]))`-length  ***methplusplus* genes** vector of linear regression coefficients.
-It means that the expression of *methplusplus* genes that are reactivated in a demethylating context is more significantly associated with a demethylation of the region surrounding their TSS than *methplusplus* genes themselves.
 
 
 
 
-```{r eval=FALSE}
-tcga_project = "TCGA-LUSC"
-s = mreadRDS(paste0("tcga_studies/study_", tcga_project, "_trscr.rds"))
-s = truncate_survival(s, 60)
-idx_sample = rownames(s$exp_grp)[!is.na(s$exp_grp$os)]
 
 
-foo = sapply(gene_symbols, function(gene_symbol) {
-  try(momic_pattern(gene_symbol, tcga_project))
-})
-```
 
 
-## Survival
 
-```{r survival, eval=FALSE}
 gene_symbols = intersect(intersect(idx[feats[idx,]$survival_pvals < 0.05], idx[-log10(feats[idx,]$momik_pvals)>5]), union(idx2, idx3)) 
 gene_symbols = gene_symbols[order(feats[gene_symbols,]$momik_pvals)][1:min(20, length(gene_symbols))]
 
